# cfs-plugins

./: .editorconfig  .eslintrc.json  .gitignore  DEVELOPMENT.md  LICENSE  README.md  conanfile.py  package.json  rollup.config.js  tsconfig.json
api/: .eslintrc.json  README.md  package.json
api/src/: cfs-data-provider.ts  cfs-plugin.ts  index.ts
api/src/generators/: cfs-code-generator.ts  cfs-project-generator.ts  cfs-workspace-generator.ts
api/src/generic/: cfs-generic-plugin.ts
api/src/services/: cfs-service-provider.ts  cfs-services.ts
api/src/types/: cfs-code-generation.ts  cfs-config.ts  cfs-feature.ts  cfs-file-map.ts  cfs-plugin-info.ts  cfs-plugin.ts  (+7 more)
plugins/: README.md  genai.js  package.json  rollup.config.js  tsconfig.json
plugins/default-workspace-plugin/: .cfsplugin  index.ts
plugins/max78002-cnn-acc/: .cfsplugin
plugins/msdk-multi-core-dual-core-sync/: .cfsplugin
plugins/msdk-multi-core-hello-world/: .cfsplugin
plugins/msdk-project-plugin/: .cfsplugin  index.ts
plugins/msdk-single-core-cnn/: .cfsplugin
plugins/msdk-single-core-dma/: .cfsplugin
plugins/msdk-single-core-hello-world/: .cfsplugin  index.ts
plugins/msdk-single-core-hello-world-cpp/: .cfsplugin
plugins/msdk-single-core-i2c-scan/: .cfsplugin
plugins/msdk-single-core-icc/: .cfsplugin
plugins/msdk-single-core-rtc/: .cfsplugin
plugins/msdk-single-core-tflm/: .cfsplugin
plugins/msdk-single-core-uart-loop-back/: .cfsplugin
plugins/registers-project-plugin/: .cfsplugin  index.ts
plugins/sharcfx-multi-core-example/: .cfsplugin
plugins/sharcfx-multi-core-tflm-on-m33/: .cfsplugin
plugins/sharcfx-project-plugin/: .cfsplugin
plugins/sharcfx-single-core-example/: .cfsplugin
plugins/sharcfx-single-core-tflm/: .cfsplugin
plugins/zephyr-project-plugin/: .cfsplugin  index.ts
plugins/zephyr-single-core-adc-sequence/: .cfsplugin
plugins/zephyr-single-core-basic-synchronization/: .cfsplugin
plugins/zephyr-single-core-blinky/: .cfsplugin
plugins/zephyr-single-core-counter-alarm/: .cfsplugin
plugins/zephyr-single-core-cpp-synchronization/: .cfsplugin
plugins/zephyr-single-core-dining-philosophers/: .cfsplugin
plugins/zephyr-single-core-dining-philosophers/files/: CMakeLists.txt
plugins/zephyr-single-core-hello-cpp-world/: .cfsplugin
plugins/zephyr-single-core-hello-cpp-world/files/: CMakeLists.txt  README.rst
plugins/zephyr-single-core-i2c-custom-target/: .cfsplugin
plugins/zephyr-single-core-littlefs/: .cfsplugin
plugins/zephyr-single-core-littlefs/files/: CMakeLists.txt  README.rst
plugins/zephyr-single-core-tflm/: .cfsplugin
plugins/zephyr-single-core-watchdog/: .cfsplugin
plugins/zephyr-tfm-secure-partition/: .cfsplugin
plugins/zephyr41-project-plugin/: .cfsplugin  index.ts
plugins/zephyr41-single-core-blinky/: .cfsplugin  index.ts
(+545 files in other folders)
